fix: remove backdrop-filter
backdrop-filter is unnecessary and makes the text unreadable

--- a/styles/TestComp.module.css
+++ b/styles/TestComp.module.css
@@ -24,7 +24,6 @@
     padding: 10px 15px;
     border-radius: 16px;
     box-sizing: border-box;
-    backdrop-filter: blur(5px);
     background: rgba(180, 180, 180, 0.37);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(180, 180, 180, 0.56);
